# Advent-of-FPGA-2025

./: LICENSE  README.md  advent-of-fpga-2025.opam  dune-project
lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day10_2.ml  day12.ml  dune  runner.ml  util.ml
test/: dune
