(lang dune 3.20)

(name advent-of-fpga-2025)

(generate_opam_files true)

(source
 (github Joshua-Chin/advent-of-fpga-2025))

(authors "Joshua Chin <joshuarchin@gmail.com>")

(maintainers "Joshua Chin <joshuarchin@gmail.com>")

(license MIT)

(package
 (name advent-of-fpga-2025)
 (synopsis "Advent of Code 2025 with Hardcaml")
 (description "A project to solve Advent of Code 2025 using Hardcaml.")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
